--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,12 +28,15 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  better_player_enhanced: ^0.0.5
   bloc: ^9.0.0
   cupertino_icons: ^1.0.8
   flutter:
     sdk: flutter
   flutter_bloc: ^9.0.0
+  html: ^0.15.5
   http: ^1.3.0
+  webview_flutter: ^4.10.0
 
 dev_dependencies:
   flutter_lints: ^5.0.0
