--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter_bloc: ^9.0.0
   html: ^0.15.5
   http: ^1.3.0
+  readmore: ^3.0.0
   webview_flutter: ^4.10.0
 
 dev_dependencies:
