feat: tambah fitur auth menggunakan google

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -42,3 +42,8 @@ android {
 flutter {
     source = "../.."
 }
+
+dependencies {
+    // implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    implementation "com.google.android.gms:play-services-auth:20.7.0"
+}
