--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^9.0.0
   flutter_dotenv: ^5.2.1
+  google_sign_in: ^6.2.2
   html: ^0.15.5
   http: ^1.3.0
   readmore: ^3.0.0
